--- a/wdshop/src/main/res/layout/activity_home.xml
+++ b/wdshop/src/main/res/layout/activity_home.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.example.wdshop.custom.NoScrollViewPager
         android:id="@+id/viewpage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/group"
         />
     <RadioGroup
         android:id="@+id/group"
@@ -15,6 +19,7 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:background="@mipmap/bg_homepage_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
         <RadioButton
             android:layout_width="@dimen/dp_30"
@@ -69,4 +74,4 @@
             />
 
     </RadioGroup>
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
