--- a/wdshop/src/main/res/layout/home_fragment.xml
+++ b/wdshop/src/main/res/layout/home_fragment.xml
@@ -8,17 +8,10 @@
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
         android:layout_marginLeft="@dimen/dp_20"
+        android:layout_alignBottom="@+id/home_editx_search"
         android:background="@mipmap/common_btn_menu"
         android:layout_marginTop="@dimen/dp_33"
         />
-    <LinearLayout
-        android:id="@+id/linearlayout_search"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/home_image_category"
-        >
-
         <EditText
             android:id="@+id/home_editx_search"
             android:layout_width="@dimen/dp_230"
@@ -30,20 +23,6 @@
             android:hint="请输入要搜索的商品"
             android:paddingLeft="@dimen/dp_20"
             />
-        <TextView
-            android:id="@+id/home_text_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/dp_24"
-            android:layout_toRightOf="@id/home_editx_search"
-            android:text="搜索"
-            android:layout_marginTop="@dimen/dp_30"
-            android:textColor="#666666"
-            android:textSize="@dimen/sp_14"
-            />
-    </LinearLayout>
     <ImageView
         android:id="@+id/home_image_search"
         android:layout_width="@dimen/dp_24"
@@ -53,36 +32,19 @@
         android:layout_marginTop="@dimen/dp_35"
         android:background="@mipmap/common_nav_btn_search_n"
         />
-
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/scro"
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linearlayout_search"
+        android:layout_below="@id/home_editx_search"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="@dimen/dp_20"
         >
-
         <RelativeLayout
-            android:id="@+id/re"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/linearlayout_search"
-            android:clipChildren="false">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/category_one_recycle"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_43"
-                android:layout_marginTop="@dimen/dp_8"
-                android:background="@mipmap/bg_one"
-                android:visibility="invisible" />
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/category_two_recycle"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_92"
-                android:layout_below="@id/category_one_recycle"
-                android:visibility="invisible"
-                />
+            android:clipChildren="false"
+            >
             <com.stx.xhb.xbanner.XBanner
                 android:id="@+id/home_xbanner"
                 android:layout_width="@dimen/dp_300"
@@ -91,8 +53,8 @@
                 android:layout_marginTop="@dimen/dp_20"
                 app:clipChildrenLeftRightMargin="@dimen/dp_10"
                 app:isClipChildrenMode="true"
-                app:pageChangeDuration="1000" />
-
+                app:AutoPlayTime="2000"
+                />
             <ImageView
                 android:id="@+id/hot_commodity"
                 android:layout_width="match_parent"
@@ -100,7 +62,6 @@
                 android:layout_below="@id/home_xbanner"
                 android:layout_marginTop="@dimen/dp_30"
                 android:background="@mipmap/bg_rxxp_syf" />
-
             <TextView
                 android:id="@+id/text_hot_commodity"
                 android:layout_width="wrap_content"
@@ -111,18 +72,16 @@
                 android:text="热销新品"
                 android:textColor="#ff7f57"
                 android:textSize="@dimen/sp_16" />
-
             <ImageButton
                 android:id="@+id/hot_image_btn"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_6"
                 android:layout_below="@id/home_xbanner"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_250"
+                android:layout_marginLeft="@dimen/dp_100"
                 android:layout_marginTop="@dimen/dp_43"
                 android:layout_toRightOf="@id/text_hot_commodity"
                 android:background="@mipmap/home_btn_moer_pink_n" />
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/hot_recycleview"
                 android:layout_width="wrap_content"
@@ -150,17 +109,15 @@
                 android:text="魔力时尚"
                 android:textColor="#6699ff"
                 android:textSize="@dimen/sp_16" />
-
             <ImageButton
                 android:id="@+id/fashion_image_btn"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="6dp"
                 android:layout_below="@id/hot_recycleview"
-                android:layout_marginLeft="@dimen/dp_250"
+                android:layout_marginLeft="@dimen/dp_100"
                 android:layout_marginTop="@dimen/dp_23"
                 android:layout_toRightOf="@id/text_fashion"
                 android:background="@mipmap/home_btn_more_purple_n" />
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/fashion_recycleview"
                 android:layout_width="wrap_content"
@@ -177,7 +134,6 @@
                 android:layout_below="@id/fashion_recycleview"
                 android:layout_marginTop="@dimen/dp_20"
                 android:background="@mipmap/bg_pzsh_syf" />
-
             <TextView
                 android:id="@+id/text_quality"
                 android:layout_width="wrap_content"
@@ -188,18 +144,16 @@
                 android:text="品质生活"
                 android:textColor="#ff6600"
                 android:textSize="@dimen/sp_16" />
-
             <ImageButton
                 android:id="@+id/quality_image_btn"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_6"
                 android:layout_below="@id/fashion_recycleview"
-                android:layout_marginLeft="@dimen/dp_250"
+                android:layout_marginLeft="@dimen/dp_100"
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_marginRight="@dimen/dp_24"
                 android:layout_toRightOf="@id/text_quality"
                 android:background="@mipmap/common_btn_more_yellow_n" />
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/quality_recycleview"
                 android:layout_width="wrap_content"
@@ -208,13 +162,79 @@
                 android:layout_marginLeft="@dimen/dp_24"
                 android:layout_marginRight="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_10" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_70"
-                android:layout_below="@id/quality_recycleview"
-                android:background="#ccc"
-                />
         </RelativeLayout>
     </ScrollView>
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/find_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/home_editx_search"
+        android:layout_marginTop="@dimen/dp_20"
+        android:visibility="gone"
+        />
+   <ImageView
+       android:id="@+id/more_image"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_30"
+        android:layout_below="@+id/home_editx_search"
+       android:layout_marginTop="@dimen/dp_20"
+       android:visibility="gone"
+       />
+    <TextView
+        android:id="@+id/more_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="text"
+        android:textSize="@dimen/sp_16"
+        android:layout_below="@id/home_editx_search"
+        android:layout_marginTop="@dimen/dp_20"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        />
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/xrecycle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/more_image"
+        android:visibility="gone"
+        />
+    <ImageView
+        android:id="@+id/image_no"
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="@dimen/dp_140"
+        android:layout_below="@id/home_editx_search"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/dp_30"
+        android:background="@mipmap/meiyoushop"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/text_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_no"
+        android:layout_centerHorizontal="true"
+        android:text="抱歉没有找到该商品......"
+        android:layout_marginTop="@dimen/dp_15"
+        android:textSize="@dimen/sp_24"
+        android:visibility="gone"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/category_one_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_43"
+        android:layout_marginTop="@dimen/dp_8"
+        android:background="@mipmap/bg_one"
+        android:layout_below="@+id/home_editx_search"
+        android:visibility="gone"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/category_two_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_92"
+        android:layout_below="@id/category_one_recycle"
+        android:visibility="gone"
+        android:background="#995d5d5d"
+        />
 </RelativeLayout>
