--- a/wdshop/src/main/res/layout/mlss_item.xml
+++ b/wdshop/src/main/res/layout/mlss_item.xml
@@ -10,7 +10,7 @@
     android:layout_marginTop="@dimen/dp_5"
     android:layout_marginBottom="@dimen/dp_5"
     android:padding="@dimen/dp_10"
-    android:background="@drawable/circle_shape"
+    android:background="@drawable/recycle_item_shape"
     android:elevation="@dimen/dp_4"
     >
 <com.facebook.drawee.view.SimpleDraweeView
