--- a/wdshop/src/main/res/layout/more_item.xml
+++ b/wdshop/src/main/res/layout/more_item.xml
@@ -13,15 +13,15 @@
         >
 
         <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/pzsh_image"
+            android:id="@+id/more_image"
             android:layout_width="@dimen/dp_131"
             android:layout_height="@dimen/dp_102" />
 
         <TextView
-            android:id="@+id/pzsh_title"
+            android:id="@+id/more_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pzsh_image"
+            android:layout_below="@+id/more_image"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_marginBottom="@dimen/dp_10"
             android:ellipsize="end"
@@ -30,10 +30,10 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
-            android:id="@+id/pash_price"
+            android:id="@+id/more_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/pzsh_title"
+            android:layout_below="@id/more_title"
             android:layout_centerHorizontal="true"
             android:textColor="#f00"
             android:textSize="@dimen/sp_14" />
