--- a/wdshop/src/main/res/layout/mine_fragment.xml
+++ b/wdshop/src/main/res/layout/mine_fragment.xml
@@ -1,10 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+   <ImageView
+       android:id="@+id/mine_background_image"
+       android:layout_width="@dimen/dp_0"
+       android:layout_height="@dimen/dp_0"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:background="@mipmap/bg_wdf"
+       />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constrain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@mipmap/tab_home_bottom_wode"
+        android:layout_marginTop="@dimen/dp_142"
+        android:background="@drawable/mine_shape"
+        >
+        <TextView
+            android:id="@+id/mine_text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fresco:layout_constraintLeft_toLeftOf="parent"
+            fresco:layout_constraintRight_toRightOf="parent"
+            fresco:layout_constraintTop_toTopOf="parent"
+            android:text="我是吃不胖的小姐姐"
+            android:textSize="@dimen/sp_14"
+            android:textColor="#666666"
+            android:layout_marginTop="@dimen/dp_60"
+            />
+    <ImageView
+        android:id="@+id/data_image"
+        android:layout_width="@dimen/dp_24"
+        android:layout_height="@dimen/sp_24"
+        fresco:layout_constraintLeft_toLeftOf="parent"
+        fresco:layout_constraintTop_toBottomOf="@id/mine_text_name"
+        android:background="@mipmap/grzl_wdf"
+        android:layout_marginLeft="@dimen/dp_24"
+        android:layout_marginTop="@dimen/dp_70"
+        />
+        <View
+            android:id="@+id/data_view"
+            android:layout_width="@dimen/dp_267"
+            android:layout_height="@dimen/dp_1"
+            fresco:layout_constraintLeft_toRightOf="@id/data_image"
+            android:background="#ededed"
+            fresco:layout_constraintBottom_toBottomOf="@id/data_image"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_24"
+            />
+        <TextView
+            android:id="@+id/presonal_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fresco:layout_constraintBottom_toBottomOf="@id/data_view"
+           fresco:layout_constraintLeft_toLeftOf="@id/data_view"
+            fresco:layout_constraintTop_toTopOf="@id/data_image"
+            android:layout_marginBottom="@dimen/dp_3"
+            android:text="个人资料"
+            android:textSize="@dimen/sp_14"
+            android:textColor="#666666"
+            />
+        <ImageView
+            android:id="@+id/circle_image"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/sp_24"
+            fresco:layout_constraintLeft_toLeftOf="parent"
+            fresco:layout_constraintTop_toBottomOf="@id/data_image"
+            android:background="@mipmap/wdqz_wdf"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginTop="@dimen/dp_20"
+            />
+        <View
+            android:id="@+id/circle_view"
+            android:layout_width="@dimen/dp_267"
+            android:layout_height="@dimen/dp_1"
+            fresco:layout_constraintLeft_toRightOf="@id/circle_image"
+            android:background="#ededed"
+            fresco:layout_constraintBottom_toBottomOf="@id/circle_image"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_24"
+            />
+        <TextView
+            android:id="@+id/circle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fresco:layout_constraintBottom_toBottomOf="@id/circle_view"
+            fresco:layout_constraintLeft_toLeftOf="@id/circle_view"
+            fresco:layout_constraintTop_toTopOf="@id/circle_image"
+            android:layout_marginBottom="@dimen/dp_3"
+            android:text="我的圈子"
+            android:textSize="@dimen/sp_14"
+            android:textColor="#666666"
+            />
+        <ImageView
+            android:id="@+id/footprint_image"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/sp_24"
+            fresco:layout_constraintLeft_toLeftOf="parent"
+            fresco:layout_constraintTop_toBottomOf="@id/circle_image"
+            android:background="@mipmap/zj_wdf"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginTop="@dimen/dp_20"
+            />
+        <View
+            android:id="@+id/footprint_view"
+            android:layout_width="@dimen/dp_267"
+            android:layout_height="@dimen/dp_1"
+            fresco:layout_constraintLeft_toRightOf="@id/footprint_image"
+            android:background="#ededed"
+            fresco:layout_constraintBottom_toBottomOf="@id/footprint_image"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_24"
+            />
+        <TextView
+            android:id="@+id/footprint_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fresco:layout_constraintBottom_toBottomOf="@id/footprint_view"
+            fresco:layout_constraintLeft_toLeftOf="@id/footprint_view"
+            fresco:layout_constraintTop_toTopOf="@id/footprint_image"
+            android:layout_marginBottom="@dimen/dp_3"
+            android:text="我的足迹"
+            android:textSize="@dimen/sp_14"
+            android:textColor="#666666"
+            />
+        <ImageView
+            android:id="@+id/wallet_image"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/sp_24"
+            fresco:layout_constraintLeft_toLeftOf="parent"
+            fresco:layout_constraintTop_toBottomOf="@id/footprint_image"
+            android:background="@mipmap/wdqb_wdf"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginTop="@dimen/dp_20"
+            />
+        <View
+            android:id="@+id/wallet_view"
+            android:layout_width="@dimen/dp_267"
+            android:layout_height="@dimen/dp_1"
+            fresco:layout_constraintLeft_toRightOf="@id/wallet_image"
+            android:background="#ededed"
+            fresco:layout_constraintBottom_toBottomOf="@id/wallet_image"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_24"
+            />
+        <TextView
+            android:id="@+id/wallet_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fresco:layout_constraintBottom_toBottomOf="@id/wallet_view"
+            fresco:layout_constraintLeft_toLeftOf="@id/wallet_view"
+            fresco:layout_constraintTop_toTopOf="@id/wallet_image"
+            android:layout_marginBottom="@dimen/dp_3"
+            android:text="我的钱包"
+            android:textSize="@dimen/sp_14"
+            android:textColor="#666666"
+            />
+        <ImageView
+            android:id="@+id/address_image"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/sp_24"
+            fresco:layout_constraintLeft_toLeftOf="parent"
+            fresco:layout_constraintTop_toBottomOf="@id/wallet_image"
+            android:background="@mipmap/shdz_wdf"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginTop="@dimen/dp_20"
+            />
+        <View
+            android:id="@+id/address_view"
+            android:layout_width="@dimen/dp_267"
+            android:layout_height="@dimen/dp_1"
+            fresco:layout_constraintLeft_toRightOf="@id/address_image"
+            android:background="#ededed"
+            fresco:layout_constraintBottom_toBottomOf="@id/address_image"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_24"
+            />
+        <TextView
+            android:id="@+id/address_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fresco:layout_constraintBottom_toBottomOf="@id/address_view"
+            fresco:layout_constraintLeft_toLeftOf="@id/address_view"
+            fresco:layout_constraintTop_toTopOf="@id/address_image"
+            android:layout_marginBottom="@dimen/dp_3"
+            android:text="我的收货地址"
+            android:textSize="@dimen/sp_14"
+            android:textColor="#666666"
+            />
+    </android.support.constraint.ConstraintLayout>
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/mine_simple"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/dp_102"
+        android:background="@mipmap/touxiang_wdf"
+        fresco:roundAsCircle="true"
         />
 </android.support.constraint.ConstraintLayout>
