--- a/wdshop/src/main/res/layout/activity_presonal_data.xml
+++ b/wdshop/src/main/res/layout/activity_presonal_data.xml
@@ -95,7 +95,7 @@
             android:id="@+id/my_password_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我的昵称"
+            android:text="我的密码"
             app:layout_constraintLeft_toLeftOf="@id/my_profile_view"
             app:layout_constraintTop_toBottomOf="@id/my_nivkname_text"
             android:layout_marginTop="@dimen/dp_20"
