--- a/wdshop/src/main/res/layout/presonal_alertdalog_name.xml
+++ b/wdshop/src/main/res/layout/presonal_alertdalog_name.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/updata_text"
@@ -29,11 +29,15 @@
     <EditText
         android:id="@+id/updata_edix"
         android:layout_width="@dimen/dp_0"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_30"
         app:layout_constraintLeft_toRightOf="@id/updata_name"
         app:layout_constraintBottom_toBottomOf="@id/updata_name"
+        app:layout_constraintTop_toTopOf="@id/updata_name"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/alertdalog_edit_shape"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:paddingLeft="@dimen/dp_5"
         />
     <Button
         android:id="@+id/updata_btn"
@@ -41,7 +45,9 @@
         android:layout_height="@dimen/dp_50"
         app:layout_constraintTop_toBottomOf="@id/updata_edix"
         app:layout_constraintLeft_toLeftOf="@id/updata_name"
-        android:layout_marginTop="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_20"
         android:text="修改"
         android:textColor="#222222"
         android:background="@drawable/alertdalog_button_shape"
@@ -52,7 +58,8 @@
         android:layout_height="@dimen/dp_50"
         app:layout_constraintTop_toBottomOf="@id/updata_edix"
         app:layout_constraintRight_toRightOf="@id/updata_edix"
-        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_20"
         android:text="取消"
         android:textColor="#222222"
         android:background="@drawable/alertdalog_button_shape"
