--- a/wdshop/src/main/res/layout/activity_particulars.xml
+++ b/wdshop/src/main/res/layout/activity_particulars.xml
@@ -1,60 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/header"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:paddingTop="24dp"
-    android:background="#00FFFFFF"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <FrameLayout
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:background="#00FFFFFF"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        >
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="48dp">
-
-            <RadioButton
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:button="@null"
-                android:textColor="#00000000"
-                android:gravity="center"
-                android:text="宝贝"/>
-
-            <RadioButton
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:button="@null"
-                android:textColor="#00000000"
-                android:gravity="center"
-                android:text="评价"/>
-
-            <RadioButton
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:button="@null"
-                android:textColor="#00000000"
-                android:gravity="center"
-                android:text="详情"/>
-            <RadioButton
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:button="@null"
-                android:textColor="#00000000"
-                android:text="推荐"/>
-        </RadioGroup>
-        <View
-            android:id="@+id/layer"
-            android:layout_width="match_parent"
-            android:background="#00FFFFFF"
-            android:layout_height="48dp"/>
-    </FrameLayout>
-</LinearLayout>
+            android:layout_height="match_parent"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            >
+            <com.youth.banner.Banner
+                android:id="@+id/banner"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_350"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/banner"
+        android:text="price"
+        android:textSize="@dimen/sp_14"
+        android:textColor="#f00"
+        />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/price"
+        android:layout_marginTop="@dimen/dp_15"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="title"
+        android:textSize="@dimen/sp_18"
+        />
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/dp_10"
+        />
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
+</android.support.constraint.ConstraintLayout>
