--- a/wdshop/src/main/res/layout/category_find_item.xml
+++ b/wdshop/src/main/res/layout/category_find_item.xml
@@ -7,6 +7,7 @@
     android:layout_margin="@dimen/dp_10"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/recycle_item_shape"
+    android:id="@+id/find_relate_click"
     >
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/find_simple"
