--- a/wdshop/src/main/res/layout/rxxp_item.xml
+++ b/wdshop/src/main/res/layout/rxxp_item.xml
@@ -10,6 +10,7 @@
        android:layout_height="wrap_content"
        android:background="@drawable/recycle_item_shape"
        android:padding="@dimen/dp_10"
+       android:id="@+id/rxxp_relate"
        >
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/rxxp_image"
