--- a/wdshop/src/main/res/layout/activity_login.xml
+++ b/wdshop/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:clipToPadding="true"
-    tools:context=".activity.LoginActivity"
+    tools:context=".login.activity.LoginActivity"
     android:background="@mipmap/login_register_background"
     >
    <ImageView
