--- a/wdshop/src/main/res/layout/activity_particulars.xml
+++ b/wdshop/src/main/res/layout/activity_particulars.xml
@@ -54,4 +54,24 @@
         />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
+    <ImageView
+        android:id="@+id/add"
+        android:layout_width="@dimen/dp_60"
+        android:layout_height="@dimen/dp_40"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/dp_100"
+        android:src="@mipmap/common_btn_add_n"
+        android:background="@drawable/add_cart_shape"
+        />
+    <ImageView
+        android:id="@+id/buy"
+        android:layout_width="@dimen/dp_60"
+        android:layout_height="@dimen/dp_40"
+        android:src="@mipmap/common_btn_buy_n"
+        app:layout_constraintTop_toBottomOf="@id/add"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="@dimen/dp_10"
+        android:background="@drawable/add_cart_shape"
+        />
 </android.support.constraint.ConstraintLayout>
