--- a/wdshop/src/main/res/layout/cart_fragment.xml
+++ b/wdshop/src/main/res/layout/cart_fragment.xml
@@ -1,10 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@mipmap/tab_home_bottom_gouwuche"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <Button
+        android:id="@+id/btn_close"
+        android:layout_width="@dimen/dp_118"
+        android:layout_height="@dimen/dp_50"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="#ff5e70"
+        android:text="去结算"
+        android:textSize="16sp"
+        android:textColor="#fff"
+        />
+    <CheckBox
+        android:id="@+id/query"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/btn_close"
+        app:layout_constraintTop_toTopOf="@id/btn_close"
+        android:layout_marginLeft="@dimen/dp_10"
+        />
+    <TextView
+        android:id="@+id/query_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/query"
+        app:layout_constraintBottom_toBottomOf="@id/btn_close"
+        app:layout_constraintTop_toTopOf="@id/btn_close"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:text="全选"
+        android:textSize="@dimen/sp_12"
+        android:textColor="#666666"
+        />
+    <TextView
+        android:id="@+id/heji"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/btn_close"
+        app:layout_constraintTop_toTopOf="@id/btn_close"
+        app:layout_constraintLeft_toRightOf="@id/query_text"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:text="合计:"
+        android:textSize="@dimen/sp_12"
+        android:textColor="#666"
+        />
+    <TextView
+        android:id="@+id/total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/btn_close"
+        app:layout_constraintTop_toTopOf="@id/btn_close"
+        app:layout_constraintLeft_toRightOf="@id/heji"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:textColor="#ff0606"
+        android:textSize="@dimen/sp_16"
+        android:text="￥0"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cart_recyycle"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="@dimen/dp_0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_close"
         />
 </android.support.constraint.ConstraintLayout>
