--- a/wdshop/src/main/res/layout/cart_shopping_item.xml
+++ b/wdshop/src/main/res/layout/cart_shopping_item.xml
@@ -1,58 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginTop="@dimen/dp_20"
-    android:layout_marginBottom="@dimen/dp_10"
     android:layout_height="wrap_content"
-    android:id="@+id/cart_relative"
-    >
-    <RadioButton
-        android:id="@+id/cart_radio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_14"
-        android:layout_marginRight="@dimen/dp_14"
-        />
-    <RelativeLayout
-        android:layout_toRightOf="@+id/cart_radio"
-        android:layout_width="@dimen/dp_292"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="@dimen/dp_5"
+    android:layout_marginBottom="@dimen/dp_5">
+    <Button
+        android:id="@+id/shop_car_del"
+        android:layout_width="@dimen/dp_60"
         android:layout_height="@dimen/dp_97"
-        android:elevation="@dimen/dp_4"
-        android:padding="@dimen/dp_8"
-        android:background="@drawable/circle_shape"
+        android:background="#ff5e70"
+        android:text="删除"
+        android:textColor="#fff"
+        android:textSize="@dimen/sp_14" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cart_relative"
         >
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/cart_image"
-            android:layout_width="@dimen/dp_80"
-            android:layout_height="@dimen/dp_80" />
-        <TextView
-            android:id="@+id/cart_title"
-            android:layout_toRightOf="@+id/cart_image"
+        <CheckBox
+            android:id="@+id/cart_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#666"
-            android:textSize="@dimen/sp_12"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:text="title"
+            android:layout_marginLeft="@dimen/dp_14"
+            android:layout_marginRight="@dimen/dp_14"
             />
-        <TextView
-            android:id="@+id/cart_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/dp_14"
-            android:textColor="#ff0606"
-            android:layout_toRightOf="@id/cart_image"
-            android:layout_alignBottom="@id/cart_image"
-            android:text="price"
-            />
-        <com.example.wdshop.custom.CustomViewNum
-            android:id="@+id/cart_custom_view_num"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="@dimen/dp_292"
+            android:layout_height="@dimen/dp_97"
+            android:layout_toRightOf="@id/cart_radio"
+            android:padding="@dimen/dp_8"
+            android:background="@drawable/cart_iten_shape"
+            >
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/cart_image"
+                android:layout_width="@dimen/dp_80"
+                android:layout_height="@dimen/dp_80"
+                android:layout_marginRight="@dimen/dp_10"
+                />
+            <TextView
+                android:id="@+id/cart_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#666"
+                android:textSize="@dimen/sp_12"
+                android:maxLines="2"
+                app:layout_constraintLeft_toRightOf="@id/cart_image"
+                app:layout_constraintTop_toTopOf="@id/cart_image"
+                android:text="title"
+                android:layout_marginLeft="@dimen/dp_8"
+                />
+            <TextView
+                android:id="@+id/cart_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dp_14"
+                android:textColor="#ff0606"
+                android:maxLines="2"
+                app:layout_constraintLeft_toRightOf="@id/cart_image"
+               app:layout_constraintBottom_toBottomOf="@id/cart_image"
+                android:text="price"
+                android:layout_marginLeft="@dimen/dp_8"
+                />
+            <com.example.wdshop.custom.CustomViewNum
+                android:id="@+id/cart_custom_view_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/cart_image"
+                app:layout_constraintRight_toRightOf="parent"
+                />
+        </android.support.constraint.ConstraintLayout>
     </RelativeLayout>
-
-</RelativeLayout>
+</com.daimajia.swipe.SwipeLayout>
