--- a/wdshop/src/main/res/layout/activity_wallet.xml
+++ b/wdshop/src/main/res/layout/activity_wallet.xml
@@ -29,12 +29,14 @@
         />
     <TextView
         android:id="@+id/money"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:text="100.00"
         android:textColor="#343434"
         android:textSize="64sp"
+        android:maxLines="1"
         app:layout_constraintLeft_toLeftOf="@id/balance"
+        app:layout_constraintRight_toRightOf="@id/wallet_back"
         app:layout_constraintTop_toBottomOf="@id/balance"
         />
     <TextView
