--- a/wdshop/src/main/res/layout/cart_fragment.xml
+++ b/wdshop/src/main/res/layout/cart_fragment.xml
@@ -67,5 +67,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_close"
+        android:layout_marginTop="@dimen/dp_30"
         />
 </android.support.constraint.ConstraintLayout>
