--- a/wdshop/src/main/res/drawable/payment_shape.xml
+++ b/wdshop/src/main/res/drawable/payment_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/dp_12"/>
+    <stroke android:width="@dimen/dp_2" android:color="#50999999"/>
+    <corners android:radius="@dimen/dp_3"/>
     <solid android:color="#ffffff"/>
-    <stroke android:color="#50999999" android:width="@dimen/dp_2"/>
 </shape>
