--- a/wdshop/src/main/res/layout/order_fragment.xml
+++ b/wdshop/src/main/res/layout/order_fragment.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/title_cons"
         android:layout_width="@dimen/dp_312"
         android:layout_height="@dimen/dp_102"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -124,4 +125,14 @@
             android:textColor="#666666"
             />
     </android.support.constraint.ConstraintLayout>
+    <com.example.wdshop.custom.NoScrollViewPager
+        android:id="@+id/order_viewpager"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="@dimen/dp_0"
+        app:layout_constraintTop_toBottomOf="@+id/title_cons"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/dp_20"
+        />
 </android.support.constraint.ConstraintLayout>
