--- a/wdshop/src/main/res/layout/activity_payment.xml
+++ b/wdshop/src/main/res/layout/activity_payment.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:id="@+id/con_yv"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/way"
@@ -92,32 +91,44 @@
             app:layout_constraintBottom_toBottomOf="@id/wechat"
             app:layout_constraintLeft_toRightOf="@id/wechat"
             app:layout_constraintTop_toTopOf="@id/wechat" />
-        <RadioButton
-            android:id="@+id/alipay_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_24"
+
+        <RadioGroup
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_180"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@id/alipay"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/alipay" />
+            app:layout_constraintTop_toTopOf="@id/balancepaid">
+            <RadioButton
+                android:id="@+id/balancepaid_radio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dp_24"
+                android:layout_weight="1"
+                app:layout_constraintBottom_toBottomOf="@id/balancepaid"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/balancepaid" />
 
-        <RadioButton
-            android:id="@+id/balancepaid_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_24"
-            app:layout_constraintBottom_toBottomOf="@id/balancepaid"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/balancepaid" />
+            <RadioButton
+                android:id="@+id/wechat_radio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dp_24"
+                android:layout_weight="1"
+                app:layout_constraintBottom_toBottomOf="@id/wechat"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/wechat" />
 
-        <RadioButton
-            android:id="@+id/wechat_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_24"
-            app:layout_constraintBottom_toBottomOf="@id/wechat"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/wechat" />
+            <RadioButton
+                android:id="@+id/alipay_radio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dp_24"
+                android:layout_weight="1"
+                app:layout_constraintBottom_toBottomOf="@id/alipay"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/alipay" />
+        </RadioGroup>
     </android.support.constraint.ConstraintLayout>
 
     <TextView
@@ -126,8 +137,8 @@
         android:layout_height="@dimen/dp_40"
         android:layout_marginBottom="@dimen/dp_100"
         android:background="@drawable/payment_button_shape"
-        android:text="余额支付0元"
         android:gravity="center"
+        android:text="余额支付0元"
         android:textColor="#ffffff"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -194,66 +205,66 @@
         android:id="@+id/con_error"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="#80000000">
+        android:background="#80000000"
+        android:visibility="gone">
+
         <ImageView
             android:id="@+id/error"
             android:layout_width="@dimen/dp_100"
             android:layout_height="@dimen/dp_100"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="@dimen/dp_152"
             android:background="@mipmap/group"
-            />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/error_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/error"
+            android:layout_marginTop="@dimen/dp_30"
+            android:text="支付失败"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/sp_20"
             app:layout_constraintLeft_toLeftOf="@id/error"
             app:layout_constraintRight_toRightOf="@id/error"
-            android:text="支付失败"
-            android:textSize="@dimen/sp_20"
-            android:textColor="#ffffff"
-            android:layout_marginTop="@dimen/dp_30"
-            />
+            app:layout_constraintTop_toBottomOf="@id/error" />
+
         <TextView
             android:id="@+id/zan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/error_text"
             android:layout_marginTop="@dimen/dp_20"
+            android:text="暂未开通微信与支付宝支付"
             android:textColor="#ffffff"
             android:textSize="@dimen/sp_12"
-            android:text="暂未开通微信与支付宝支付"
-            />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/error_text" />
+
         <TextView
             android:id="@+id/yu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/zan"
             android:layout_marginTop="@dimen/dp_5"
+            android:text="请选择余额支付"
             android:textColor="#ffffff"
             android:textSize="@dimen/sp_12"
-            android:text="请选择余额支付"
-            />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/zan" />
+
         <Button
             android:id="@+id/goon"
             android:layout_width="@dimen/dp_108"
             android:layout_height="@dimen/dp_40"
-            app:layout_constraintTop_toBottomOf="@id/yu"
+            android:layout_marginTop="@dimen/dp_40"
+            android:background="@drawable/payment_button_shape"
+            android:text="继续支付"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/sp_14"
             app:layout_constraintLeft_toLeftOf="@id/error"
             app:layout_constraintRight_toRightOf="@id/error"
-            android:layout_marginTop="@dimen/dp_40"
-            android:text="继续支付"
-            android:textSize="@dimen/sp_14"
-            android:textColor="#ffffff"
-            android:background="@drawable/payment_button_shape"
-            />
+            app:layout_constraintTop_toBottomOf="@id/yu" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
