--- a/wdshop/src/main/res/layout/activity_wallet.xml
+++ b/wdshop/src/main/res/layout/activity_wallet.xml
@@ -87,11 +87,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/wallet_recycle"
         android:layout_width="@dimen/dp_0"
-        android:layout_height="@dimen/dp_0"
-        app:layout_constraintTop_toBottomOf="@id/view_linev"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_linev"
         android:layout_marginTop="@dimen/dp_10"
         />
 </android.support.constraint.ConstraintLayout>
