--- a/wdshop/src/main/res/layout/wallet_item.xml
+++ b/wdshop/src/main/res/layout/wallet_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/sum"
@@ -10,10 +10,12 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="消费金额"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginLeft="@dimen/dp_50"
         android:layout_marginTop="@dimen/dp_10"
         android:textSize="@dimen/sp_14"
         android:textColor="#666666"
+        android:layout_marginBottom="@dimen/dp_10"
         />
     <TextView
         android:id="@+id/time"
@@ -27,5 +29,14 @@
         android:textSize="@dimen/sp_14"
         android:textColor="#666666"
         />
-
+    <View
+        android:id="@+id/view_linev"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="@dimen/dp_2"
+        app:layout_constraintTop_toBottomOf="@id/sum"
+        app:layout_constraintLeft_toLeftOf="@id/sum"
+        app:layout_constraintRight_toRightOf="@id/time"
+        android:layout_marginTop="@dimen/dp_10"
+        android:background="#ccc"
+        />
 </android.support.constraint.ConstraintLayout>
