--- a/wdshop/src/main/res/layout/activity_presonal_data.xml
+++ b/wdshop/src/main/res/layout/activity_presonal_data.xml
@@ -122,6 +122,7 @@
             android:textSize="@dimen/sp_12"
             android:textColor="#999999"
             android:text="123456"
+            android:password="true"
             />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
