--- a/wdshop/src/main/res/layout/activity_depail2.xml
+++ b/wdshop/src/main/res/layout/activity_depail2.xml
@@ -124,10 +124,10 @@
                 android:textColor="#666666"
                 android:textSize="@dimen/sp_14" />
 
-           <!-- <com.facebook.drawee.view.SimpleDraweeView
+          <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/details_Image_describe"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_306" />-->
+                android:layout_height="@dimen/dp_306" />
 
             <TextView
                 android:layout_width="wrap_content"
