--- a/wdshop/src/main/res/layout/my_circle_item_view_image.xml
+++ b/wdshop/src/main/res/layout/my_circle_item_view_image.xml
@@ -14,7 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_5"
-            android:layout_marginRight="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_10"
+            android:visibility="gone"
             />
         <RelativeLayout
             android:layout_width="@dimen/dp_312"
@@ -22,10 +23,8 @@
             android:paddingLeft="@dimen/dp_10"
             android:paddingTop="@dimen/dp_20"
             android:paddingBottom="@dimen/dp_20"
-            android:layout_height="wrap_content"
             android:background="@drawable/circle_shape"
-            android:elevation="@dimen/dp_3"
-            android:padding="@dimen/dp_10"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_10"
             >
             <TextView
@@ -33,21 +32,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
-            <com.facebook.drawee.view.SimpleDraweeView
+            <com.example.wdshop.custom.CustomMultiImageView
                 android:layout_below="@+id/circle_content"
                 android:id="@+id/circle_image01"
-                android:layout_width="@dimen/dp_140"
-                android:layout_height="@dimen/dp_140"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_10"
                 />
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:layout_below="@+id/circle_content"
-                android:id="@+id/circle_image02"
-                android:layout_width="@dimen/dp_140"
-                android:layout_height="@dimen/dp_140"
-                android:layout_toRightOf="@id/circle_image01"
-                android:layout_marginTop="@dimen/dp_10"/>
             <TextView
                 android:id="@+id/circle_time"
                 android:text="243243243"
