--- a/wdshop/src/main/res/layout/my_circle_item_view_one.xml
+++ b/wdshop/src/main/res/layout/my_circle_item_view_one.xml
@@ -23,17 +23,19 @@
             android:paddingTop="@dimen/dp_20"
             android:paddingBottom="@dimen/dp_20"
             android:background="@drawable/circle_shape"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_10"
+            >
             <TextView
                 android:id="@+id/circle_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:layout_below="@+id/circle_content"
                 android:id="@+id/circle_image01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_282"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_10"
                 />
