--- a/wdshop/src/main/res/layout/my_circle_item_view_three.xml
+++ b/wdshop/src/main/res/layout/my_circle_item_view_three.xml
@@ -23,6 +23,7 @@
             android:paddingTop="@dimen/dp_20"
             android:paddingBottom="@dimen/dp_20"
             android:background="@drawable/circle_shape"
+            android:layout_marginBottom="@dimen/dp_10"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/circle_content"
